container instead of container-fluid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq06l5RUVfib62IYRQacLc-KAy0XIWAVs"></script>
   </head>
   <body>
-    <div class="container-fluid" id="boundary">
+    <div class="container" id="boundary">
       <div class="row"></div>
     </div>
   </body>
