--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 </head>
 
 <body>
-  <div class="container" id="boundary">
-    <div class="row"></div>
-  </div>
+  <div class="container" id="boundary"></div>
 </body>
 <script src="/bundle.js"></script>
 
